--- a/src/App.css
+++ b/src/App.css
@@ -141,4 +141,10 @@ box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   width: 30%;
   margin: 20px auto;
 }
+
+.screen-text{
+  text-align: center;
+  font-size: 17px;
+  font-weight: bold;
+}
                                     
